--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,15 @@
 @import 'normalize.css';
 
 body {
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   margin: 0;
   padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
