--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: rgb(255, 255, 255);
+  background-color: #f5f4ff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
