--- a/src/components/CardPromoTitle/card-promo-title.module.scss
+++ b/src/components/CardPromoTitle/card-promo-title.module.scss
@@ -32,3 +32,32 @@
   gap: 1rem;
   cursor: pointer;
 }
+
+@media (max-width: 900px) {
+  .promo {
+    padding-left: calc(50% - 400px);
+    padding-right: calc(50% - 400px);
+  }
+
+  .title {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .promo {
+    gap: 0;
+    margin-top: 2rem;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+
+  .title {
+    font-size: 1rem;
+  }
+
+  .button {
+    width: 8rem;
+    height: 3rem;
+  }
+}
