--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -1,7 +1,11 @@
 $logo-color: #b4387a;
 
-$black-1: #0b132a;
+$black-1: #1d1929;
+$black-2: #1c1c1e;
+$black-3: #0b132a;
 
 $blue-1: #003cff;
 
 $white-1: #ffffff;
+
+$gray-1: #4f5665;
