FeatureOverview is ready

--- a/src/components/CardPromoTitle/card-promo-title.module.scss
+++ b/src/components/CardPromoTitle/card-promo-title.module.scss
@@ -38,6 +38,7 @@
   .promo {
     padding-left: calc(50% - 400px);
     padding-right: calc(50% - 400px);
+    margin-top: 4.1875rem;
   }
 
   .title {
