htmk for CurrencyRate was crated

--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -1,5 +1,6 @@
 $logo-color: #b4387a;
 
+$black-0: #000;
 $black-1: #1d1929;
 $black-2: #1c1c1e;
 $black-3: #0b132a;
@@ -9,3 +10,5 @@ $blue-1: #003cff;
 $white-1: #ffffff;
 
 $gray-1: #4f5665;
+$gray-2: #f4f4f4e5;
+$gray-3: #b2b2b2;
