--- a/src/components/CurrencyRate/currency-rate.module.scss
+++ b/src/components/CurrencyRate/currency-rate.module.scss
@@ -6,6 +6,11 @@
   padding-right: calc(50% - 580px);
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .wrapper {
   width: 100%;
   border-radius: 24px;
@@ -18,6 +23,7 @@
   font-size: 1.875rem;
   line-height: 50px;
   color: $black-2;
+  margin-bottom: 24px;
 }
 
 .updateInfo {
@@ -27,11 +33,18 @@
   color: $black-0;
 }
 
+.table {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
 .tableTitle {
   font-weight: 500;
   font-size: 1.125rem;
   line-height: 50px;
   color: $black-0;
+  margin-bottom: 1rem;
 }
 
 .link {
@@ -42,19 +55,49 @@
   color: $white-1;
 }
 
-
-.currency {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 112%;
-  letter-spacing: 2%;
-  color: $gray-4;
+.list {
+  display: grid;
+  padding-left: 0;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
 }
 
-.value {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 112%;
-  letter-spacing: 2%;
-  color: $black-0;
+@media (max-width: 500px) {
+  .exchangeRate {
+    padding: 1%;
+  }
+
+  .wrapper {
+    width: 100%;
+    border-radius: 24px;
+    background: linear-gradient(to bottom, $gray-2, $gray-3);
+    padding: 1rem;
+  }
+  .title {
+    font-size: 1rem;
+    margin-bottom: 0;
+  }
+  .updateInfo {
+    font-size: 0.5rem;
+  }
+
+  .tableTitle {
+    font-size: 1rem;
+    margin-bottom: 0;
+  }
+  .bank {
+    width: 90px;
+  }
+  .link {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 112%;
+    letter-spacing: 2%;
+    color: $white-1;
+  }
+  .table {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0px;
+  }
 }
