--- a/src/components/FinancialNewsBlock/financial-news-block.module.scss
+++ b/src/components/FinancialNewsBlock/financial-news-block.module.scss
@@ -8,11 +8,11 @@
 }
 
 .header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2.875rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2.875rem;
 }
 
 .title {
@@ -30,6 +30,24 @@
   color: $black-5;
 }
 
+.cardBox {
+    display: flex;
+    flex-direction: row;
+    gap: 80px;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+  width: 320px;
+  max-width: 100%;
+  height: 448px;
+  max-height: 100%;
+  border-radius: 28px;
+  background: $white-1;
+  padding: 2rem;
+}
+
 .image {
   max-width: 256px;
   width: 100%;
@@ -42,6 +60,7 @@
   font-size: 1.25rem;
   line-height: 25px;
   color: $black-0;
+  text-align: center;
 }
 
 .cardText {
@@ -49,4 +68,5 @@
   font-size: 1rem;
   line-height: 23px;
   color: $black-0;
+  text-align: center;
 }
