--- a/src/components/FinancialNewsBlock/financial-news-block.module.scss
+++ b/src/components/FinancialNewsBlock/financial-news-block.module.scss
@@ -30,22 +30,32 @@
   color: $black-5;
 }
 
-.cardBox {
-    display: flex;
-    flex-direction: row;
-    gap: 80px;
-    align-items: center;
-    justify-content: center;
+.sliderContainer {
+  position: relative;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  gap: 20px;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 10px;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .card {
   width: 320px;
-  max-width: 100%;
+  min-width: 320px;
   height: 448px;
-  max-height: 100%;
   border-radius: 28px;
   background: $white-1;
   padding: 2rem;
+  flex: 0 0 auto;
 }
 
 .image {
@@ -69,4 +79,29 @@
   line-height: 23px;
   color: $black-0;
   text-align: center;
+}
+
+.prevButton,
+.nextButton {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background-color: $white-1;
+  border: none;
+  color: $black-6;
+  font-size: 20px;
+  cursor: pointer;
+  border: 1px solid $blue-1;
+  outline: none;
+  &:hover {
+    background-color: $blue-1;
+    color: $white-1;
+  }
+}
+
+.buttonBox {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: end;
+  gap: 1.125rem;
 }
