дэск топ версия версти готова

--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -7,6 +7,7 @@ $black-3: #0b132a;
 $black-4: #1c1c1c;
 $black-5: #2d3748;
 $black-6: #222222;
+$black-7: #363a781a;
 
 $blue-1: #003cff;
 
@@ -18,3 +19,6 @@ $gray-3: #b2b2b2;
 $gray-4: #808080;
 
 $orange-1: #eb801d;
+
+$purple-1: #686df1;
+$purple-2: #9092b0;
