--- a/src/components/CardPromoTitle/card-promo-title.module.scss
+++ b/src/components/CardPromoTitle/card-promo-title.module.scss
@@ -1,65 +1,61 @@
 @use '../../styles/color-palette.scss' as *;
 @use '../../styles/mixins.scss' as *;
 
-.promo {
+.card-promo {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
   display: flex;
   gap: 10rem;
   margin-top: 8.1875rem;
-}
 
-.title {
-  max-width: 622px;
-  width: 100%;
-  font-weight: 700;
-  font-size: 2.3rem;
-  line-height: 50px;
-  margin-top: 0;
-  margin-bottom: 2.25rem;
-  color: $black-2;
-}
+  &__title {
+    max-width: 622px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 2.3rem;
+    line-height: 50px;
+    margin-top: 0;
+    margin-bottom: 2.25rem;
+    color: $black-2;
+  }
 
-.button {
-  width: 9rem;
-  height: 3.125rem;
-}
+  &__button {
+    width: 9rem;
+    height: 3.125rem;
+  }
 
-.images {
-  max-width: 518px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  cursor: pointer;
-}
+  &__images {
+    max-width: 518px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    cursor: pointer;
+  }
 
-@media (max-width: 920px) {
-  .promo {
+  @media (max-width: 920px) {
     padding-left: calc(50% - 400px);
     padding-right: calc(50% - 400px);
     margin-top: 4.1875rem;
+
+    &__title {
+      font-size: 1.5rem;
+    }
   }
 
-  .title {
-    font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 500px) {
-  .promo {
+  @media (max-width: 500px) {
     gap: 0;
     margin-top: 2rem;
     padding-left: 1%;
     padding-right: 1%;
-  }
 
-  .title {
-    font-size: 1rem;
-  }
+    &__title {
+      font-size: 1rem;
+    }
 
-  .button {
-    width: 8rem;
-    height: 3rem;
+    &__button {
+      width: 8rem;
+      height: 3rem;
+    }
   }
 }
