--- a/src/components/CurrencyRate/currency-rate.module.scss
+++ b/src/components/CurrencyRate/currency-rate.module.scss
@@ -1,104 +1,98 @@
 @use '../../styles/color-palette.scss' as *;
 @use '../../styles/mixins.scss' as *;
 
-.exchangeRate {
+.currency-rate {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
   margin-top: 3rem;
-}
 
-.header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.wrapper {
-  width: 100%;
-  border-radius: 24px;
-  background: linear-gradient(to bottom, $gray-2, $gray-3);
-  padding: 2rem;
-}
-
-.title {
-  font-weight: 500;
-  font-size: 1.875rem;
-  line-height: 50px;
-  color: $black-2;
-  margin-bottom: 24px;
-}
-
-.updateInfo {
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 50px;
-  color: $black-0;
-}
-
-.table {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 50px;
-}
-
-.tableTitle {
-  font-weight: 500;
-  font-size: 1.125rem;
-  line-height: 50px;
-  color: $black-0;
-  margin-bottom: 1rem;
-}
-
-.link {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 112%;
-  letter-spacing: 2%;
-  color: $white-1;
-}
-
-.list {
-  display: grid;
-  padding-left: 0;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 2rem;
-}
-
-@media (max-width: 500px) {
-  .exchangeRate {
-    padding: 1%;
-  }
-
-  .wrapper {
+  &__wrapper {
     width: 100%;
     border-radius: 24px;
     background: linear-gradient(to bottom, $gray-2, $gray-3);
-    padding: 1rem;
-  }
-  .title {
-    font-size: 1rem;
-    margin-bottom: 0;
-  }
-  .updateInfo {
-    font-size: 0.5rem;
+    padding: 2rem;
   }
 
-  .tableTitle {
+  &__header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__title {
+    font-weight: 500;
+    font-size: 1.875rem;
+    line-height: 50px;
+    color: $black-2;
+    margin-bottom: 24px;
+  }
+
+  &__update-info {
+    font-weight: 500;
     font-size: 1rem;
-    margin-bottom: 0;
+    line-height: 50px;
+    color: $black-0;
   }
-  .bank {
-    width: 90px;
+
+  &__table-title {
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 50px;
+    color: $black-0;
+    margin-bottom: 1rem;
   }
-  .link {
+
+  &__table {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+  }
+
+  &__list {
+    display: grid;
+    padding-left: 0;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2rem;
+  }
+
+  &__link {
     font-weight: 700;
-    font-size: 14px;
+    font-size: 20px;
     line-height: 112%;
     letter-spacing: 2%;
     color: $white-1;
   }
-  .table {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0px;
+
+  @media (max-width: 500px) {
+    padding: 1%;
+
+    &__wrapper {
+      padding: 1rem;
+    }
+
+    &__title {
+      font-size: 1rem;
+      margin-bottom: 0;
+    }
+
+    &__update-info {
+      font-size: 0.5rem;
+    }
+
+    &__table-title {
+      font-size: 1rem;
+      margin-bottom: 0;
+    }
+
+    &__bank {
+      width: 90px;
+    }
+
+    &__link {
+      font-size: 14px;
+    }
+
+    &__table {
+      margin-bottom: 0;
+    }
   }
 }
