--- a/src/components/FinancialNewsBlock/financial-news-block.module.scss
+++ b/src/components/FinancialNewsBlock/financial-news-block.module.scss
@@ -1,98 +1,102 @@
 @use '../../styles/color-palette.scss' as *;
 @use '../../styles/mixins.scss' as *;
 
-.section {
+.financial-news-block {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
   margin-top: 3rem;
-}
 
-.header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2.875rem;
-}
-
-.title {
-  font-weight: 500;
-  font-size: 1.875rem;
-  line-height: 50px;
-  color: $black-0;
-  margin-bottom: 0.5rem;
-}
-
-.subtitle {
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 50px;
-  color: $black-5;
-}
-
-.sliderContainer {
-  position: relative;
-  overflow: hidden;
-}
-
-.slider {
-  display: flex;
-  gap: 20px;
-  scroll-behavior: smooth;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  padding-bottom: 10px;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-.prevButton,
-.nextButton {
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
-  background-color: $white-1;
-  border: none;
-  color: $black-6;
-  font-size: 20px;
-  cursor: pointer;
-  border: 1px solid $blue-1;
-  outline: none;
-  &:hover {
-    background-color: $blue-1;
-    color: $white-1;
-  }
-}
-
-.buttonBox {
-  margin-top: 3rem;
-  display: flex;
-  justify-content: end;
-  gap: 1.125rem;
-}
-
-@media (max-width: 920px) {
-  .sliderContainer {
-    padding: 2%;
-  }
-}
-
-@media (max-width: 500px) {
-  .title {
-    font-size: 1.2rem;
-  }
-
-  .subtitle {
-    text-align: center;
-    font-size: 0.7rem;
-    padding: 0 2%;
-  }
-  .buttonBox {
-    margin-top: 2rem;
+  &__header {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    align-items: center;
+    margin-bottom: 2.875rem;
+  }
+
+  &__title {
+    font-weight: 500;
+    font-size: 1.875rem;
+    line-height: 50px;
+    color: $black-0;
+    margin-bottom: 0.5rem;
+  }
+
+  &__subtitle {
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 50px;
+    color: $black-5;
+  }
+
+  &__slider-container {
+    position: relative;
+    overflow: hidden;
+  }
+
+  &__slider {
+    display: flex;
+    gap: 20px;
+    scroll-behavior: smooth;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    padding-bottom: 10px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  &__button-box {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1.125rem;
+  }
+
+  &__button {
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background-color: $white-1;
+    border: 1px solid $blue-1;
+    color: $black-6;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none;
+
+    &:hover {
+      background-color: $blue-1;
+      color: $white-1;
+    }
+  }
+
+  &__icon {
+    width: 24px;
+    height: 24px;
+  }
+
+  @media (max-width: 920px) {
+    &__slider-container {
+      padding: 2%;
+    }
+  }
+
+  @media (max-width: 500px) {
+    &__title {
+      font-size: 1.2rem;
+    }
+
+    &__subtitle {
+      text-align: center;
+      font-size: 0.7rem;
+      padding: 0 2%;
+    }
+
+    &__button-box {
+      margin-top: 2rem;
+      justify-content: center;
+      gap: 1rem;
+    }
   }
 }
