--- a/src/components/GlobalAvailability/global-availability.module.scss
+++ b/src/components/GlobalAvailability/global-availability.module.scss
@@ -1,59 +1,60 @@
 @use '../../styles/color-palette.scss' as *;
 @use '../../styles/mixins.scss' as *;
 
-.section {
+.global-availability {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
-}
 
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title {
-  font-weight: 500;
-  font-size: 1.875rem;
-  line-height: 50px;
-  color: $black-4;
-  margin-top: 3rem;
-  margin-bottom: 8px;
-}
-
-.description {
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 50px;
-  color: $black-4;
-  margin-bottom: 3rem;
-}
-
-.imageBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.image {
-  max-width: 1060px;
-  width: 100%;
-  max-height: 538px;
-  height: 100%;
-}
-
-@media (max-width: 500px) {
-  .title {
-    font-size: 1.2rem;
-    margin-top: 1.5rem;
-    margin-bottom: 0;
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  .description {
+
+  &__title {
     font-weight: 500;
-    font-size: 0.9rem;
+    font-size: 1.875rem;
+    line-height: 50px;
+    color: $black-4;
+    margin-top: 3rem;
+    margin-bottom: 8px;
+  }
+
+  &__description {
+    font-weight: 500;
+    font-size: 1rem;
     line-height: 50px;
     color: $black-4;
     margin-bottom: 3rem;
+  }
+
+  &__image-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__image {
+    max-width: 1060px;
+    width: 100%;
+    max-height: 538px;
+    height: 100%;
+  }
+
+  @media (max-width: 500px) {
+    &__title {
+      font-size: 1.2rem;
+      margin-top: 1.5rem;
+      margin-bottom: 0;
+    }
+
+    &__description {
+      font-weight: 500;
+      font-size: 0.9rem;
+      line-height: 50px;
+      color: $black-4;
+      margin-bottom: 3rem;
+    }
   }
 }
