--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,16 @@ li {
 a {
   text-decoration: none;
 }
+
+
+html {
+  font-size: 16px; // базовый размер
+
+  @media (max-width: 920px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 12px;
+  }
+}
