--- a/src/components/CardPromoTitle/card-promo-title.module.scss
+++ b/src/components/CardPromoTitle/card-promo-title.module.scss
@@ -33,22 +33,33 @@
     cursor: pointer;
   }
 
-  @media (max-width: 920px) {
-    padding-left: calc(50% - 400px);
-    padding-right: calc(50% - 400px);
-    margin-top: 4.1875rem;
+ @media (min-width: 500px) and (max-width: 920px) {
+    padding-left: 3%;
+    padding-right: 3%;
+    gap: 4rem;
+    margin-top: 4rem;
 
     &__title {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
+      max-width: 400px;
+      margin-bottom: 1.5rem;
+    }
+
+    &__button {
+      width: 7.5rem;
+      height: 3rem;
+    }
+
+    &__images {
+      max-width: 400px;
+      gap: 0.75rem;
     }
   }
-
   @media (max-width: 500px) {
     gap: 0;
     margin-top: 2rem;
     padding-left: 1%;
     padding-right: 1%;
-
     &__title {
       font-size: 1rem;
     }
