--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -31,7 +31,7 @@
 
   &__tel {
     font-weight: 700;
-    font-size: 30px;
+    font-size: 1.875rem;
     line-height: 147%;
     color: $black-0;
     font-style: normal;
@@ -90,7 +90,7 @@
     }
 
     &__tel {
-      font-size: 21px;
+      font-size: 1.875rem;
     }
   }
 
@@ -104,6 +104,10 @@
     &__cookie-notice {
       font-size: 10px;
       padding-bottom: 72px;
+    }
+
+       &__tel {
+      font-size: 1rem;
     }
   }
 }
