--- a/src/components/SupportNewsletterSignup/support-newsletter-signup.module.scss
+++ b/src/components/SupportNewsletterSignup/support-newsletter-signup.module.scss
@@ -50,6 +50,7 @@
   }
 
   &__input {
+    max-width: 100%;
     outline: 0;
     border: 0;
     font-weight: 400;
@@ -70,6 +71,7 @@
   }
 
   &__subscribe-button {
+    max-width: 100%;
     outline: 0;
     border: 0;
     background: transparent;
@@ -79,6 +81,10 @@
     color: $white-1;
     cursor: pointer;
   }
+
+  &__icon {
+    max-width: 100%;
+  }
 }
 
 @media (max-width: 500px) {
@@ -87,7 +93,8 @@
     padding-right: 1%;
 
     &__input-wrapper {
-      padding: 14px 14px;
+      padding: 0.5rem 0.5rem;
+      gap: 0;
     }
 
     &__bank-news {
