4. Разбиения на страницы

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@ a {
 }
 
 html {
-  font-size: 16px; // базовый размер
+  font-size: 16px;
 
   @media (max-width: 920px) {
     font-size: 14px;
@@ -24,4 +24,28 @@ html {
   @media (max-width: 500px) {
     font-size: 12px;
   }
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app-main {
+  flex-grow: 1;
 }
