--- a/src/components/layout/Footer/footer.module.scss
+++ b/src/components/layout/Footer/footer.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/color-palette.scss' as *;
-@use '../../styles/mixins.scss' as *;
+@use '../../../styles/color-palette.scss' as *;
+@use '../../../styles/mixins.scss' as *;
 
 .footer {
   padding-left: calc(50% - 580px);
@@ -111,8 +111,8 @@
     }
 
     &__img {
-          height: 5rem !important;
-          width: auto !important;
+      height: 5rem !important;
+      width: auto !important;
     }
   }
 }
