--- a/src/components/layout/Header/header.module.scss
+++ b/src/components/layout/Header/header.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/color-palette.scss' as *;
-@use '../../styles/mixins.scss' as *;
+@use '../../../styles/color-palette.scss' as *;
+@use '../../../styles/mixins.scss' as *;
 
 ul {
   margin: 0;
