--- a/src/components/shared/CurrencyItem/currency-item.module.scss
+++ b/src/components/shared/CurrencyItem/currency-item.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/color-palette.scss' as *;
-@use '../../styles/mixins.scss' as *;
+@use '../../../styles/color-palette.scss' as *;
+@use '../../../styles/mixins.scss' as *;
 
 .currency {
   font-weight: 700;
