--- a/src/components/home/CardPromoTitle/card-promo-title.module.scss
+++ b/src/components/home/CardPromoTitle/card-promo-title.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/color-palette.scss' as *;
-@use '../../styles/mixins.scss' as *;
+@use '../../../styles/color-palette.scss' as *;
+@use '../../../styles/mixins.scss' as *;
 
 .card-promo {
   padding-left: calc(50% - 580px);
