--- a/src/components/shared/SliderCard/slider-card.module.scss
+++ b/src/components/shared/SliderCard/slider-card.module.scss
@@ -9,12 +9,17 @@
   background: $white-1;
   padding: 2rem;
   flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; 
 
   &__image {
     max-width: 256px;
     width: 100%;
     max-height: 120px;
     height: 100%;
+    object-fit: cover; 
+    margin-bottom: 1rem;
   }
 
   &__title {
@@ -23,6 +28,11 @@
     line-height: 25px;
     color: $black-0;
     text-align: center;
+    margin-bottom: 1rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 
   &__text {
@@ -31,5 +41,11 @@
     line-height: 23px;
     color: $black-0;
     text-align: center;
+    display: -webkit-box;
+    -webkit-line-clamp: 5; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    flex-grow: 1; 
+    margin-bottom: 1rem;
   }
 }
