--- a/src/pages/LoanPage/loan-page.module.scss
+++ b/src/pages/LoanPage/loan-page.module.scss
@@ -1,4 +1,4 @@
-.not-found {
+.loan {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
   @media (min-width: 500px) and (max-width: 920px) {
