Подписали цвета в color-palette

--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -1,5 +1,7 @@
+//Logo
 $logo-color: #b4387a;
 
+// Black
 $black-0: #000;
 $black-1: #1d1929;
 $black-2: #1c1c1e;
@@ -9,17 +11,25 @@ $black-5: #2d3748;
 $black-6: #222222;
 $black-7: #363a781a;
 
+// Blue
 $blue-1: #003cff;
 
+// White
 $white-1: #ffffff;
 
+// Gray
 $gray-1: #4f5665;
 $gray-2: #f4f4f4e5;
 $gray-3: #b2b2b2;
 $gray-4: #808080;
 $gray-5: #f4f4f4;
 
+// Orange
 $orange-1: #eb801d;
 
+// Purple
 $purple-1: #686df1;
 $purple-2: #9092b0;
+
+// Gold
+$gold-1: #B2A35F;
