desctop for PlatinumCard has been done

--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -24,9 +24,11 @@ $gray-2: #f4f4f4e5;
 $gray-3: #b2b2b2;
 $gray-4: #808080;
 $gray-5: #f4f4f4;
+$gray-6: #cbd5e0c7;
 
 // Orange
 $orange-1: #eb801d;
+$orange-2: #feebc8;
 
 // Purple
 $purple-1: #686df1;
