--- a/src/components/loan/PlatinumCard/platinum-card.module.scss
+++ b/src/components/loan/PlatinumCard/platinum-card.module.scss
@@ -4,13 +4,30 @@
 .platinum-card {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
+  margin-top: 1.25rem;
+  margin-bottom: 3rem;
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 7.5rem;
+    padding: 3rem 7.3125rem 3rem 2rem;
+    background: linear-gradient(to bottom, $gray-6, $orange-2);
+    border-radius: 28px;
+    box-shadow:
+      0px 2px 4px 0px rgba(0, 0, 0, 0.2),
+      0px 0px 8px 0px rgba(0, 0, 0, 0.08);
+  }
 
   &__title {
+    max-width: 649px;
     font-weight: 700;
-    font-size: 3rem;
+    font-size: 2.3rem;
     line-height: 100%;
     letter-spacing: 2%;
     color: $white-1;
+    margin-bottom: 3rem;
   }
   &__description {
     font-weight: 500;
@@ -18,6 +35,12 @@
     line-height: 112%;
     letter-spacing: 2%;
     color: $black-5;
+    margin-bottom: 2rem;
+  }
+  &__features {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 2rem;
   }
   &__feature-value {
     font-weight: 700;
@@ -36,5 +59,10 @@
   &__button {
     border-radius: 8px;
     padding: 1rem;
+  }
+  &__image {
+    width: 23.75rem;
+    height: 14.125rem;
+    border-radius: 20px;
   }
 }
