--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -25,6 +25,7 @@ $gray-3: #b2b2b2;
 $gray-4: #808080;
 $gray-5: #f4f4f4;
 $gray-6: #cbd5e0c7;
+$gray-7: #eaecee;
 
 // Orange
 $orange-1: #eb801d;
@@ -38,5 +39,4 @@ $purple-2: #9092b0;
 $gold-1: #b2a35f;
 
 // Brown
-$brown-1: #7B7454;
-    
+$brown-1: #7b7454;
