--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -27,6 +27,7 @@ $gray-5: #f4f4f4;
 $gray-6: #cbd5e0c7;
 $gray-7: #eaecee;
 $gray-8: #7f92acb2;
+$gray-9: #434343;
 
 // Orange
 $orange-1: #eb801d;
