--- a/src/components/loan/CreditCardBenefits/credit-card-benefits.module.scss
+++ b/src/components/loan/CreditCardBenefits/credit-card-benefits.module.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/color-palette.scss' as *;
 @use '../../../styles/mixins.scss' as *;
 
-.credit-card-benefits {
+.loan-page {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
   margin-bottom: 6rem;
@@ -16,6 +16,10 @@
     padding-left: 0.5rem;
   }
 
+  .active {
+    color: green;
+  }
+
   &__nav-link {
     font-weight: 500;
     font-size: 1rem;
@@ -28,12 +32,5 @@
     height: 2px;
     background-color: rgba(128, 128, 128, 0.2);
     margin-top: 0.5rem;
-  }
-
-  &__cards {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 40px;
-    margin-top: 3.0625rem;
   }
 }
