<ArrowUpIcon /> was added

--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -28,6 +28,7 @@ $gray-6: #cbd5e0c7;
 $gray-7: #eaecee;
 $gray-8: #7f92acb2;
 $gray-9: #434343;
+$gray-10: #E2E8F0;
 
 // Orange
 $orange-1: #eb801d;
