--- a/src/components/loan/FaqBlock/faq-block.module.scss
+++ b/src/components/loan/FaqBlock/faq-block.module.scss
@@ -5,23 +5,34 @@
   &__item {
     padding: 32px;
     border: 1px solid $gray-10;
+    display: flex;
+    justify-content: space-between;
   }
   &__title {
     font-weight: 700;
     font-size: 1.875rem;
     line-height: 147%;
     color: $black-0;
+    margin: 2rem 0;
   }
   &__question {
     font-weight: 500;
     font-size: 1rem;
     line-height: 147%;
     color: $black-2;
+    margin-bottom: 3.5rem;
   }
   &__answer {
     font-weight: 400;
     font-size: 1rem;
     line-height: 147%;
     color: $brown-1;
+    max-width: 1200px;
+    width: 100%;
+  }
+  &__icon {
+    cursor: pointer;
+    width: 1rem;
+    height: 1rem;
   }
 }
