--- a/src/components/loan/CreditCardBenefits/credit-card-benefits.module.scss
+++ b/src/components/loan/CreditCardBenefits/credit-card-benefits.module.scss
@@ -1,36 +1,48 @@
 @use '../../../styles/color-palette.scss' as *;
-@use '../../../styles/mixins.scss' as *;
 
 .loan-page {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
   margin-bottom: 6rem;
 
+  &__nav {
+    position: relative;
+  }
+
   &__nav-list {
-    max-width: 447px;
-    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: stretch;
     gap: 2rem;
     padding-left: 0.5rem;
+    position: relative;
+    z-index: 2;
+  }
+
+  &__nav-link {
+    font-weight: 500;
+    font-size: 1rem;
+    color: $brown-1;
+    padding-bottom: 0.5rem;
+    display: inline-block;
+    transition: color 0.3s;
   }
 
   .active {
     color: green;
   }
 
-  &__nav-link {
-    font-weight: 500;
-    font-size: 1rem;
-    line-height: 100%;
-    color: $brown-1;
-  }
-
-  &__line {
-    width: 100%;
+  &__tab-line {
+    position: relative;
     height: 2px;
     background-color: rgba(128, 128, 128, 0.2);
-    margin-top: 0.5rem;
+    width: 100%;
+    margin-top: 0.25rem;
+  }
+
+  &__tab-indicator {
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    background-color: green;
+    transition: left 0.3s ease, width 0.3s ease;
   }
 }
