background-color: $brown-1;

--- a/src/components/loan/CreditCardBenefits/credit-card-benefits.module.scss
+++ b/src/components/loan/CreditCardBenefits/credit-card-benefits.module.scss
@@ -39,7 +39,7 @@
     position: absolute;
     bottom: 0;
     height: 2px;
-    background-color: green;
+    background-color: $brown-1;
     transition:
       left 0.3s ease,
       width 0.3s ease;
