--- a/src/components/loan/HowToGetCard/how-to-get-card.module.scss
+++ b/src/components/loan/HowToGetCard/how-to-get-card.module.scss
@@ -4,8 +4,33 @@
 .how-to-get-card {
   padding-left: calc(50% - 580px);
   padding-right: calc(50% - 580px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &__container {
+display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;  
+
+  }
+  &__step {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-width: 0;; 
+  }
+
+  &__step-header {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    width: 100%; 
+    max-width: 100%;
+  }
   &__title {
-    font-weight: 500;
+    font-weight: 700;
     font-size: 1.875rem;
     line-height: 147%;
     color: $black-0;
@@ -16,10 +41,18 @@
     line-height: 147%;
     color: $black-0;
   }
+  &__line {
+    max-width: 250px;
+    width: 100%;
+    height: 2px;
+    background-color: $gray-4;
+  }
   &__step-description {
     font-weight: 500;
     font-size: 1rem;
     line-height: 147%;
     color: $black-0;
+    width: 100%;  
+    max-width: 100%; 
   }
 }
