--- a/src/components/loan/HowToGetCard/how-to-get-card.module.scss
+++ b/src/components/loan/HowToGetCard/how-to-get-card.module.scss
@@ -8,25 +8,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2.75rem;
   &__container {
-display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  gap: 20px;  
-
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 1rem;
   }
   &__step {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  min-width: 0;; 
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-width: 0;
   }
 
   &__step-header {
     display: flex;
     align-items: center;
     gap: 2rem;
-    width: 100%; 
+    width: 100%;
     max-width: 100%;
   }
   &__title {
@@ -34,6 +35,16 @@ display: flex;
     font-size: 1.875rem;
     line-height: 147%;
     color: $black-0;
+  }
+  &__step-wrapper {
+    background-color: $gray-11;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-bottom: 1.125rem;
   }
   &__step-number {
     font-weight: 700;
@@ -52,7 +63,8 @@ display: flex;
     font-size: 1rem;
     line-height: 147%;
     color: $black-0;
-    width: 100%;  
-    max-width: 100%; 
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
   }
 }
