--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -29,6 +29,7 @@ $gray-7: #eaecee;
 $gray-8: #7f92acb2;
 $gray-9: #434343;
 $gray-10: #e2e8f0;
+$gray-11: #d9d9d9;
 
 // Orange
 $orange-1: #eb801d;
