--- a/src/styles/color-palette.scss
+++ b/src/styles/color-palette.scss
@@ -11,6 +11,7 @@ $black-5: #2d3748;
 $black-6: #222222;
 $black-7: #363a781a;
 $black-8: #3d3d3d;
+$black-9: #1a202c;
 
 // Blue
 $blue-1: #003cff;
@@ -44,6 +45,10 @@ $gold-1: #b2a35f;
 
 // Brown
 $brown-1: #7b7454;
+$brown-2: #786d6d;
 
 // green
 $green-1: #88b3b899;
+
+// red
+$red-1: #ff0000;
