--- a/src/components/loan/CustomizeCard/customize-card.module.scss
+++ b/src/components/loan/CustomizeCard/customize-card.module.scss
@@ -42,12 +42,9 @@
   &__form-title {
     @extend .customize-card__chosen-title;
   }
-  // &__label {
-  //   @extend .customize-card__step;
-  //   color: $black-9;
-  // }
-  // &__required {
-  //   @extend .customize-card__step;
-  //   color: $red-1;
-  // }
+  &__btn-submit {
+    border-radius: 8px;
+    padding: 1rem 2rem;
+  }
+
 }
