--- a/src/components/loan/CustomizeCard/customize-card.module.scss
+++ b/src/components/loan/CustomizeCard/customize-card.module.scss
@@ -50,11 +50,23 @@ h4 {
     line-height: 100%;
     color: $black-0;
   }
+  &__amount-selector {
+    border: 2px solid $purple-1;
+    border-radius: 10px;
+    padding: 1.5rem 1.5rem 2.5rem 1.5rem;
+    margin-top: 2rem;
+  }
   &__label {
     @extend .customize-card__step;
+    margin-bottom: 1.125rem;
   }
   &__selected-amount {
     @extend .customize-card__step;
+  }
+  &__
+  &__amount-range {
+    display: flex;
+    justify-content: space-between
   }
   &__min-amount {
     @extend .customize-card__step;
