--- a/src/components/loan/CustomizeCard/customize-card.module.scss
+++ b/src/components/loan/CustomizeCard/customize-card.module.scss
@@ -63,10 +63,37 @@ h4 {
   &__selected-amount {
     @extend .customize-card__step;
   }
-  &__
+  &__range-input {
+  width: 100%;
+  height: 2px;
+  border-radius: 2px;
+  outline: none;
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+
+  &::-webkit-slider-thumb {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 24px;
+    height: 24px;
+    background: #6b38f2;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  &::-moz-range-thumb {
+    width: 24px;
+    height: 24px;
+    background: #6b38f2;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+}
   &__amount-range {
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    margin-top: 0.5rem;
   }
   &__min-amount {
     @extend .customize-card__step;
@@ -122,3 +149,5 @@ h4 {
     padding: 1rem 2rem;
   }
 }
+
+
