--- a/src/components/loan/PlatinumCard/platinum-card.module.scss
+++ b/src/components/loan/PlatinumCard/platinum-card.module.scss
@@ -44,6 +44,34 @@
     grid-template-columns: repeat(3, 1fr);
     margin-bottom: 2rem;
   }
+  &__feature {
+    position: relative;
+    cursor: pointer;
+    &::after {
+      content: attr(data-tooltip);
+      position: absolute;
+      bottom: -100%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: $black-8;
+      color: $white-1;
+      padding: 0.5rem;
+      white-space: normal;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease;
+      margin-bottom: 6px;
+      z-index: 10;
+      font-size: 0.75rem;
+      width: 150px;
+      line-height: 100%;
+      font-weight: 500;
+    }
+    &:hover::after {
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
   &__feature-value {
     font-weight: 700;
     font-size: 1.25rem;
