--- a/src/components/loan/blocks/CashbackBlock/cashback-block.module.scss
+++ b/src/components/loan/blocks/CashbackBlock/cashback-block.module.scss
@@ -1,5 +1,5 @@
-@use '../../../styles/color-palette.scss' as *;
-@use '../../../styles/mixins.scss' as *;
+@use '../../../../styles/color-palette.scss' as *;
+@use '../../../../styles/mixins.scss' as *;
 
 .cashback-block {
   display: grid;
