--- a/src/components/shared/FormInput/form-input.module.scss
+++ b/src/components/shared/FormInput/form-input.module.scss
@@ -34,3 +34,10 @@
   font-size: 14px;
   color: $gray-4;
 }
+
+.error-message {
+  color: $red-2;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 100%;
+}
