--- a/src/components/shared/FormInput/form-input.module.scss
+++ b/src/components/shared/FormInput/form-input.module.scss
@@ -7,6 +7,7 @@
   color: $black-0;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .wrapper {
@@ -28,11 +29,18 @@
   padding-left: 16px;
   outline: 0;
   border-radius: 6px;
-  border: 1px solid $gray-4;
+  border: 2px solid $gray-4;
   background: $orange-3;
   font-weight: 400;
   font-size: 14px;
   color: $gray-4;
+  &:focus {
+    border-color: $purple-1;
+  }
+}
+
+.input-error {
+  border-color: $red-2;
 }
 
 .error-message {
@@ -40,4 +48,14 @@
   font-weight: 500;
   font-size: 1rem;
   line-height: 100%;
+}
+
+.error-icon {
+  position: absolute;
+  top: 50%;
+  right: 8px;     
+  transform: translateY(-50%);
+  pointer-events: none; 
+  width: 24px; 
+  height: 24px;
 }
