--- a/src/components/shared/FormInput/form-input.module.scss
+++ b/src/components/shared/FormInput/form-input.module.scss
@@ -55,7 +55,8 @@
   line-height: 100%;
 }
 
-.error-icon, .success-icon {
+.error-icon,
+.success-icon {
   position: absolute;
   top: 50%;
   right: 8px;
